# RubiksCubeSolver

./: CMakeLists.txt  README.md  main.cpp
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp
Model/PatternDatabase/: PatternDatabase.h
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solver/: BFSSolver.h  IDAStarSolver.h  IDDFSSolver.h
Solvers/: BFSSolver.h  DFSSolver.h  IDAStarSolver.h  IDDFSSolver.h
